--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     Continue as Training Company
                 </p>
                 <p class="bg-slate-900 text-white py-2 mb-6 text-center rounded-3xl font-serif text-xs">
-                    <a href="../signIn.html">Get set up</a>
+                    <a href="./signIn.html">Get set up</a>
                 </p>
             </div>
         </div>
