--- a/signIn.html
+++ b/signIn.html
@@ -41,7 +41,7 @@
                 <button class="w-full bg-slate-700 text-white py-3 rounded-3xl font-medium font-poppins text-lg mb-6">Sign in</button>
 
                 <p class="ml-5 text-gray-500 text-sm">
-                    New user? <a href="./signup.html" class="text-slate-700 font-medium font-poppins">Create an account</a>
+                    New user? <a href="/signup.html" class="text-slate-700 font-medium font-poppins">Create an account</a>
                 </p>
             </div>
         </div>
