--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 </p>
                 
                 <div class="flex flex-col gap-1">
-                    <a href="#" id="trainee" onclick="selectUser('/sec-1/Signin.html', 'trainee')" class="bg-slate-300 py-3 mb-1 text-center rounded-md font-serif text-sm hover:border border-black">
+                    <a href="#" id="trainee" onclick="selectUser('./sec-1/Signin.html', 'trainee')" class="bg-slate-300 py-3 mb-1 text-center rounded-md font-serif text-sm hover:border border-black">
                         Continue as Trainee
                     </a>
-                    <a href="#" id="trainer" onclick="selectUser('/sec-2/Signin.html', 'trainer')" class="bg-slate-300 py-3 mb-1 text-center rounded-md font-serif text-sm hover:border border-black">
+                    <a href="#" id="trainer" onclick="selectUser('./sec-2/Signin.html', 'trainer')" class="bg-slate-300 py-3 mb-1 text-center rounded-md font-serif text-sm hover:border border-black">
                         Continue as Trainer
                     </a>
-                    <a href="#" id="company" onclick="selectUser('/sec-3/Signin.html', 'company')" class="bg-slate-300 py-3 mb-6 text-center rounded-md font-serif text-sm hover:border border-black">
+                    <a href="#" id="company" onclick="selectUser('./sec-3/Signin.html', 'company')" class="bg-slate-300 py-3 mb-6 text-center rounded-md font-serif text-sm hover:border border-black">
                         Continue as Training Company
                     </a>
                 </div>
