--- a/sec-1/Chats.html
+++ b/sec-1/Chats.html
@@ -115,7 +115,7 @@
                         <i class="relative z-0 mr-6 fa-solid fa-bell text-2xl opacity-70"> <div class="absolute z-10 -mt-8 ml-3 p-[4px] border-black border-2 rounded-full bg-red-600"></div></i>
                     </div>
                     <div class=" flex rounded-full w-10 h-10 bg-slate-400">
-                        <img class="rounded-full w-full h-full"  src="/images/dp.png" alt="">
+                        <img class="rounded-full w-full h-full"  src="./images/dp.png" alt="">
                     </div>
                 </div>
             </header>
@@ -137,70 +137,70 @@
                         <div id="userList" class="">
                             <!-- Example of user profiles -->
                             <div class="user-profile  flex items-center p-2 rounded shadow cursor-pointer bg-[#E5EFFC]" data-id="1">
-                                <img src="/images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
+                                <img src="./images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="2">
-                                <img src="/images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
+                                <img src="./images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="1">
-                                <img src="/images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
+                                <img src="./images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="2">
-                                <img src="/images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
+                                <img src="./images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="1">
-                                <img src="/images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
+                                <img src="./images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="2">
-                                <img src="/images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
+                                <img src="./images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="1">
-                                <img src="/images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
+                                <img src="./images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="2">
-                                <img src="/images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
+                                <img src="./images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="1">
-                                <img src="/images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
+                                <img src="./images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="2">
-                                <img src="/images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
+                                <img src="./images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
@@ -215,7 +215,7 @@
                 <div class="col-span-3  rounded-3xl  ">
                     <!-- Chat Header -->
                     <div id="chatHeader" class="p-4 bg-white  shadow flex items-center border border-b-0 border-stone-400 rounded-t-[20px]">
-                        <img id="chatUserImage" src="/images/chatprofile.png" alt="Chat User" class="w-12 h-12 rounded-full">
+                        <img id="chatUserImage" src="./images/chatprofile.png" alt="Chat User" class="w-12 h-12 rounded-full">
                         <div class="ml-4 border-stone-400">
                             <p id="chatUserName" class=" text-lg font-bold">John Smith <i class="fa-solid text-green-600 text-xs ml-1 fa-circle"></i></p>
                             <p id="chatUserStatus" class="text-sm text-gray-500">Last seen 46min ago</p>
