--- a/sec-1/BookCall.html
+++ b/sec-1/BookCall.html
@@ -13,7 +13,7 @@
     <div class="flex flex-col items-center justify-around mt-[250px]">
         <div class="flex flex-col items-center justify-center gap-12 mb-[257px]">
             <div class="bg-white w-[100px] h-[100px] flex items-center justify-center rounded-full">
-                <img class="w-[56.708px] h-[56.708px] rounded-full" src="/images/call.png" alt="">
+                <img class="w-[56.708px] h-[56.708px] rounded-full" src="./images/call.png" alt="">
             </div>
             <div>
                 <p>Your Service has been booked and confirmed!</p>
@@ -22,7 +22,7 @@
 
         <div class="flex flex-col text-center gap-10  text-white items-center justify-center">
             <div class="relative flex items-center justify-center gap-1 bg-white w-[612px] h-[60px] rounded-xl">
-                <img class="relative z-10" src="/images/ph_chat-bold.png" alt="">
+                <img class="relative z-10" src="./images/ph_chat-bold.png" alt="">
                 <a class="text-black text-[18px]" href="">Chat with Thomas Hope</a>
             </div>
             <div>
