--- a/sec-1/Signin.html
+++ b/sec-1/Signin.html
@@ -38,10 +38,10 @@
                     <a href="#" class="text-slate-700 md:text-xs lg:text-base font-semibold font-poppins">Forgot password?</a>
                 </div>
 
-                <a href="/sec-1/homeTrainee.html"><button class="w-full bg-slate-700 text-white py-3 rounded-3xl font-medium font-poppins text-lg mb-6">Sign in</button></a>
+                <a href="./sec-1/homeTrainee.html"><button class="w-full bg-slate-700 text-white py-3 rounded-3xl font-medium font-poppins text-lg mb-6">Sign in</button></a>
 
                 <p class="ml-5 text-gray-500 text-sm">
-                    New user? <a href="/sec-1/SignUp.html" class="text-slate-700 font-medium font-poppins">Create an account</a>
+                    New user? <a href="./sec-1/SignUp.html" class="text-slate-700 font-medium font-poppins">Create an account</a>
                 </p>
             </div>
         </div>
@@ -49,7 +49,7 @@
         <!-- Right side (50% width) with images -->
         <div class="hidden md:block w-full md:w-1/2 h-full relative overflow-hidden">
             <!-- Background Rectangle -->
-            <img src="/images/Rectangle.png" alt="Background Rectangle" class="absolute inset-0 w-full h-full object-cover z-0">
+            <img src="./images/Rectangle.png" alt="Background Rectangle" class="absolute inset-0 w-full h-full object-cover z-0">
 
             <!-- Visible Heading -->
             <h1 class="z-30 mt-8 ms-10 lg:mt-24 w-1/2 xl:w-1/2 h-auto relative text-white text-xs md:text-xl lg:text-3xl xl:text-4xl font-bold p-4">
@@ -59,10 +59,10 @@ journey with us
             </h1>
 
             <!-- Top right image -->
-            <img src="/images/!.png" alt="Top Right Image" class="absolute top-0 right-20 z-10 w-10 md:w-14 xl:w-20 h-auto">
+            <img src="./images/!.png" alt="Top Right Image" class="absolute top-0 right-20 z-10 w-10 md:w-14 xl:w-20 h-auto">
 
             <!-- Bottom image (Frame) -->
-            <img src="/images/Group.png" alt="Bottom Frame" class="absolute h-5/6 -mb-16 xl:-mb-4 bottom-0 left-0 z-20 -ml-16 w-full object-contain">
+            <img src="./images/Group.png" alt="Bottom Frame" class="absolute h-5/6 -mb-16 xl:-mb-4 bottom-0 left-0 z-20 -ml-16 w-full object-contain">
         </div>
     </div>
 </body>
