--- a/sec-1/bookCallc.html
+++ b/sec-1/bookCallc.html
@@ -59,26 +59,26 @@
     <div class="flex flex-col justify-center items-center h-screen">
         <div class="w-8/12 h-full">
             <div class="p-10">
-                <a href="/sec-1/searching.html" class="text-xl font-poppins"><i class="mr-2 fa-solid fa-chevron-left"></i> Book Video Call</a>
+                <a href="./sec-1/searching.html" class="text-xl font-poppins"><i class="mr-2 fa-solid fa-chevron-left"></i> Book Video Call</a>
             </div>
             
             <div class="rounded-3xl ml-16 w-full h-[188px] border border-stone-500 flex items-center justify-around">
                 
                 <div class="flex justify-center items-center">
                   <div class="rounded-full p-1 border-2 mr-6">
-                    <img class="rounded-full" src="/images/ptp.png" alt="" srcset="">
+                    <img class="rounded-full" src="./images/ptp.png" alt="" srcset="">
                   </div>
                   <div class="font-poppins mt-20">
                     <div>
                       <h1 class="flex items-center gap-2 text-xl mb-2 font-bold">Thomas Hope 
-                        <img src="/images/rt.png" alt="" srcset="">
+                        <img src="./images/rt.png" alt="" srcset="">
                       </h1>
                     </div>
                     <div class="flex">
                       <div class="flex gap-10 items-center justify-center">
                         <p>@thomashope</p>
-                        <p class="flex gap-2"><img src="/images/pt.png" alt="" srcset="">200K Trainees</p>
-                        <p class="flex gap-2"><img src="/images/playbutton.png" alt="">300 Videos</p>
+                        <p class="flex gap-2"><img src="./images/pt.png" alt="" srcset="">200K Trainees</p>
+                        <p class="flex gap-2"><img src="./images/playbutton.png" alt="">300 Videos</p>
                       </div>
                     </div>
                   </div>
