--- a/sec-3/dashboard.html
+++ b/sec-3/dashboard.html
@@ -124,7 +124,12 @@
                 </div>
             </header>
         
-           <div></div>
+           <div class="grid grid-cols-2">
+            <div>
+                div*
+            </div>
+            <div></div>
+           </div>
 
 
     <!-- script -->
