--- a/sec-1/bookCallc.html
+++ b/sec-1/bookCallc.html
@@ -66,19 +66,19 @@
                 
                 <div class="flex justify-center items-center">
                   <div class="rounded-full p-1 border-2 mr-6">
-                    <img class="rounded-full" src="./images/ptp.png" alt="" srcset="">
+                    <img class="rounded-full" src="../images/ptp.png" alt="" srcset="">
                   </div>
                   <div class="font-poppins mt-20">
                     <div>
                       <h1 class="flex items-center gap-2 text-xl mb-2 font-bold">Thomas Hope 
-                        <img src="./images/rt.png" alt="" srcset="">
+                        <img src="../images/rt.png" alt="" srcset="">
                       </h1>
                     </div>
                     <div class="flex">
                       <div class="flex gap-10 items-center justify-center">
                         <p>@thomashope</p>
-                        <p class="flex gap-2"><img src="./images/pt.png" alt="" srcset="">200K Trainees</p>
-                        <p class="flex gap-2"><img src="./images/playbutton.png" alt="">300 Videos</p>
+                        <p class="flex gap-2"><img src="../images/pt.png" alt="" srcset="">200K Trainees</p>
+                        <p class="flex gap-2"><img src="../images/playbutton.png" alt="">300 Videos</p>
                       </div>
                     </div>
                   </div>
