--- a/sec-1/Chats.html
+++ b/sec-1/Chats.html
@@ -58,41 +58,41 @@
             <h3 class="mt-6 ml-4 text-sm font-semibold font-poppins text-white">TRAINEE</h3>
             <nav class="flex flex-col py-[15px] mx-4">
                 <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 rounded" href="./sec-1/homeTrainee.html">
-                    <img class="ml-4" src="./images/dashboard.png" alt="">
+                    <img class="ml-4" src="../images/dashboard.png" alt="">
                     <span class="ml-5">Dashboard</span>
                 </a>
                 <a class="flex justify-start py-[12px] text-blue-400 border-2 border-stone-200 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/Chats.html">
-                    <img class="ml-4" src="./images/message.png" alt="">
+                    <img class="ml-4" src="../images/message.png" alt="">
                     <span class="ml-5">Messages</span>
                 </a>
                 <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/RunningTask.html">
-                    <img class="ml-4" src="./images/running.png" alt="">
+                    <img class="ml-4" src="../images/running.png" alt="">
                     <span class="ml-5">Running Task</span>
                 </a>
                 <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/OwnVideos.html">
-                    <img class="ml-4" src="./images/ownvideo.png" alt="">
+                    <img class="ml-4" src="../images/ownvideo.png" alt="">
                     <span class="ml-5">Own Videos</span>
                 </a>
                 <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/TrainingCompany.html">
-                    <img class="ml-4" src="./images/Training.png" alt="">
+                    <img class="ml-4" src="../images/Training.png" alt="">
                     <span class="ml-5">Training Company</span>
                 </a>
                 <h1 class="text-white text-xs font-poppins py-3">ADDITIONAL</h1>
                 <a class="flex justify-start py-[12px] text-slate-300 border border-stone-200 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/SpendingHistory.html">
-                    <img class="ml-4" src="./images/support.png" alt="">
+                    <img class="ml-4" src="../images/support.png" alt="">
                     <span class="ml-5 ">Spending History</span>
                 </a>
                 <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400   hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/setting.html">
-                    <img class="ml-4" src="./images/support.png" alt="">
+                    <img class="ml-4" src="../images/support.png" alt="">
                     <span class="ml-5">Settings</span>
                 </a>
 
                 <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/SupportTicker.html">
-                    <img class="ml-4" src="./images/supportTickets.png" alt="">
+                    <img class="ml-4" src="../images/supportTickets.png" alt="">
                     <span class="ml-5">Support Tickets</span>
                 </a>
                 <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-1/setting.html">
-                    <img class="ml-4" src="./images/Accountsettings.png" alt="">
+                    <img class="ml-4" src="../images/Accountsettings.png" alt="">
                     <span class="ml-5">Account Settings</span>
                 </a>
             </nav>
@@ -115,7 +115,7 @@
                         <i class="relative z-0 mr-6 fa-solid fa-bell text-2xl opacity-70"> <div class="absolute z-10 -mt-8 ml-3 p-[4px] border-black border-2 rounded-full bg-red-600"></div></i>
                     </div>
                     <div class=" flex rounded-full w-10 h-10 bg-slate-400">
-                        <img class="rounded-full w-full h-full"  src="./images/dp.png" alt="">
+                        <img class="rounded-full w-full h-full"  src="../images/dp.png" alt="">
                     </div>
                 </div>
             </header>
@@ -137,70 +137,70 @@
                         <div id="userList" class="">
                             <!-- Example of user profiles -->
                             <div class="user-profile  flex items-center p-2 rounded shadow cursor-pointer bg-[#E5EFFC]" data-id="1">
-                                <img src="./images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
+                                <img src="../images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="2">
-                                <img src="./images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
+                                <img src="../images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="1">
-                                <img src="./images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
+                                <img src="../images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="2">
-                                <img src="./images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
+                                <img src="../images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="1">
-                                <img src="./images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
+                                <img src="../images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="2">
-                                <img src="./images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
+                                <img src="../images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="1">
-                                <img src="./images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
+                                <img src="../images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="2">
-                                <img src="./images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
+                                <img src="../images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="1">
-                                <img src="./images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
+                                <img src="../images/chatprofile.png" alt="User 1" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
                                 </div>
                             </div>
                             <div class="user-profile flex items-center p-2 bg-white rounded shadow cursor-pointer hover:bg-[#E5EFFC]" data-id="2">
-                                <img src="./images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
+                                <img src="../images/chatprofile.png" alt="User 2" class="w-12 h-12 rounded-full">
                                 <div class="ml-4">
                                     <p class="text-lg font-bold">John Smith</p>
                                     <p class="text-sm text-gray-500">Hey, I am here for your help...</p>
@@ -215,7 +215,7 @@
                 <div class="col-span-3  rounded-3xl  ">
                     <!-- Chat Header -->
                     <div id="chatHeader" class="p-4 bg-white  shadow flex items-center border border-b-0 border-stone-400 rounded-t-[20px]">
-                        <img id="chatUserImage" src="./images/chatprofile.png" alt="Chat User" class="w-12 h-12 rounded-full">
+                        <img id="chatUserImage" src="../images/chatprofile.png" alt="Chat User" class="w-12 h-12 rounded-full">
                         <div class="ml-4 border-stone-400">
                             <p id="chatUserName" class=" text-lg font-bold">John Smith <i class="fa-solid text-green-600 text-xs ml-1 fa-circle"></i></p>
                             <p id="chatUserStatus" class="text-sm text-gray-500">Last seen 46min ago</p>
