--- a/sec-1/SignUp2.html
+++ b/sec-1/SignUp2.html
@@ -37,7 +37,7 @@
                         class="bg-slate-800 relative rounded-full ml-32 -mt-10 flex items-center justify-center w-[27px] h-[26px] cursor-pointer">
                         <input type="file" id="profileImage" class="hidden" accept="image/*" />
                         <label for="profileImage" class="cursor-pointer">
-                            <img class="w-full z-10" src="./images/camera.png" alt="Camera Icon" />
+                            <img class="w-full z-10" src="../images/camera.png" alt="Camera Icon" />
                         </label>
                     </div>
                     <input class="w-full mt-12 mb-16 p-3 border border-gray-300 rounded-md" type="tel" id="number" name="phone" placeholder="Phone Number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
@@ -61,7 +61,7 @@
         <!-- Right side (50% width) with images -->
         <div class="hidden md:block w-full md:w-1/2 h-full relative overflow-hidden">
             <!-- Background Rectangle -->
-            <img src="./images/Rectangle.png" alt="Background Rectangle"
+            <img src="../images/Rectangle.png" alt="Background Rectangle"
                 class="absolute inset-0 w-full h-full object-cover z-0" />
 
             <!-- Visible Heading -->
@@ -71,11 +71,11 @@
             </h1>
 
             <!-- Top right image -->
-            <img src="./images/!.png" alt="Top Right Image"
+            <img src="../images/!.png" alt="Top Right Image"
                 class="absolute top-0 right-20 z-10 w-10 md:w-14 xl:w-20 h-auto" />
 
             <!-- Bottom image (Frame) -->
-            <img src="./images/Group.png" alt="Bottom Frame"
+            <img src="../images/Group.png" alt="Bottom Frame"
                 class="absolute h-5/6 -mb-16 xl:-mb-4 bottom-0 left-0 z-20 -ml-16 w-full object-contain" />
         </div>
     </div>
