--- a/sec-1/SignUp.html
+++ b/sec-1/SignUp.html
@@ -49,10 +49,10 @@
                     </label>
                 </div>
 
-                <button class="w-full bg-slate-700 text-white py-3 rounded-3xl font-medium font-poppins text-lg mb-6"><a href="./sec-1/SignUp2.html">Next</a></button>
+                <button class="w-full bg-slate-700 text-white py-3 rounded-3xl font-medium font-poppins text-lg mb-6"><a href="/sec-1/SignUp2.html">Next</a></button>
 
                 <p class="ml-5 text-gray-500 text-sm">
-                    Already have an account? <a href="./sec-1/Signin.html" class="text-slate-700 font-medium font-poppins"> Sign in</a>
+                    Already have an account? <a href="/sec-1/Signin.html" class="text-slate-700 font-medium font-poppins"> Sign in</a>
                 </p>
             </div>
         </div>
