--- a/sec-3/SignUp.html
+++ b/sec-3/SignUp.html
@@ -49,10 +49,10 @@
                     </label>
                 </div>
 
-                <button class="w-full bg-slate-700 text-white py-3 rounded-3xl font-medium font-poppins text-lg mb-6"><a href="/sec-3/SignUp2.html">Next</a></button>
+                <button class="w-full bg-slate-700 text-white py-3 rounded-3xl font-medium font-poppins text-lg mb-6"><a href="./SignUp2.html">Next</a></button>
 
                 <p class="ml-5 text-gray-500 text-sm">
-                    Already have an account? <a href="/sec-3/Signin.html" class="text-slate-700 font-medium font-poppins"> Sign in</a>
+                    Already have an account? <a href="./Signin.html" class="text-slate-700 font-medium font-poppins"> Sign in</a>
                 </p>
             </div>
         </div>
@@ -70,10 +70,10 @@
             </h1>
 
             <!-- Top right image -->
-            <img src="/images/!.png" alt="Top Right Image" class="absolute top-0 right-20 z-10 w-10 md:w-14 xl:w-20 h-auto">
+            <img src="../images/!.png" alt="Top Right Image" class="absolute top-0 right-20 z-10 w-10 md:w-14 xl:w-20 h-auto">
 
             <!-- Bottom image (Frame) -->
-            <img src="/images/Group.png" alt="Bottom Frame" class="absolute h-5/6 -mb-16 xl:-mb-4 bottom-0 left-0 z-20 -ml-20 w-full object-contain">
+            <img src="../images/Group.png" alt="Bottom Frame" class="absolute h-5/6 -mb-16 xl:-mb-4 bottom-0 left-0 z-20 -ml-20 w-full object-contain">
         </div>
     </div>
 </body>
