--- a/sec-1/BookCall.html
+++ b/sec-1/BookCall.html
@@ -22,7 +22,7 @@
 
         <div class="flex flex-col text-center gap-10  text-white items-center justify-center">
             <div class="relative flex items-center justify-center gap-1 bg-white w-[612px] h-[60px] rounded-xl">
-                <img class="relative z-10" src="./images/ph_chat-bold.png" alt="">
+                <img class="relative z-10" src="../images/ph_chat-bold.png" alt="">
                 <a class="text-black text-[18px]" href="">Chat with Thomas Hope</a>
             </div>
             <div>
