--- a/sec-1/Payment.html
+++ b/sec-1/Payment.html
@@ -14,7 +14,7 @@
 </head>
 <body class="light-mode font-poppins justify-center items-center  transition-colors duration-300">
     <div class="p-10 text-left">
-        <a href="/sec-1/searching.html" class="text-xl font-poppins"><i class="mr-2 fa-solid fa-chevron-left"></i> Book Video Call</a>
+        <a href="./sec-1/searching.html" class="text-xl font-poppins"><i class="mr-2 fa-solid fa-chevron-left"></i> Book Video Call</a>
     </div>
     <div class="flex flex-col items-center h-screen">
         
