--- a/sec-1/SignUp2.html
+++ b/sec-1/SignUp2.html
@@ -44,12 +44,12 @@
 
 
                 <button class="w-full bg-slate-700 text-white py-3 rounded-3xl font-medium font-poppins text-lg mb-6">
-                    <a href="./sec-1/homeTrainee.html">Sign Up</a>
+                    <a href="./homeTrainee.html">Sign Up</a>
                 </button>
 
                 <p class="ml-5 text-gray-500 text-sm">
                     Already have an account?
-                    <a href="./sec-1/Signin.html" class="text-slate-700 font-medium font-poppins">
+                    <a href="./Signin.html" class="text-slate-700 font-medium font-poppins">
                         Sign in</a>
                 </p>
                 </div>
