--- a/sec-2/TrainerRequest.html
+++ b/sec-2/TrainerRequest.html
@@ -57,44 +57,44 @@
             </div>
             <h3 class="mt-6 ml-4 text-sm font-semibold font-poppins text-white">TRAINEE</h3>
             <nav class="flex flex-col py-[15px] mx-4">
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500  rounded" href="./sec-2/dashboard.html">
-                    <img class="ml-4" src="./images/dashboard.png" alt="">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500  rounded" href="./dashboard.html">
+                    <img class="ml-4" src="../images/dashboard.png" alt="">
                     <span class="ml-5">Dashboard</span>
                 </a>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-2/Chats.html">
-                    <img class="ml-4" src="./images/message.png" alt="">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./Chats.html">
+                    <img class="ml-4" src="../images/message.png" alt="">
                     <span class="ml-5">Messages</span>
                 </a>
-                <a class="flex justify-start py-[12px]  text-blue-300 border-2 border-stone-200  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-2/TrainerRequest.html">
-                  <img class="ml-4" src="./images/Training.png" alt="">
+                <a class="flex justify-start py-[12px]  text-blue-300 border-2 border-stone-200  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./TrainerRequest.html">
+                  <img class="ml-4" src="../images/Training.png" alt="">
                   <span class="ml-5">Training Request</span>
               </a>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400   hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-2/OwnVideos.html">
-                    <img class="ml-4" src="./images/ownvideo.png" alt="">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400   hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./OwnVideos.html">
+                    <img class="ml-4" src="../images/ownvideo.png" alt="">
                     <span class="ml-5">Own Videos</span>
                 </a>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-2/TrainingCom.html">
-                  <img class="ml-4" src="./images/Training.png" alt="">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./TrainingCom.html">
+                  <img class="ml-4" src="../images/Training.png" alt="">
                   <span class="ml-5">Training company</span>
               </a>
-              <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-2/Reviews.html">
-                <img class="ml-4" src="./images/Training.png" alt="">
+              <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./Reviews.html">
+                <img class="ml-4" src="../images/Training.png" alt="">
                 <span class="ml-5">Reviews</span>
             </a>
   
                 <h1 class="text-white text-xs font-poppins py-3">ADDITIONAL</h1>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-2/SpendingHistory.html">
-                    <img class="ml-4" src="./images/support.png" alt="">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400 hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./SpendingHistory.html">
+                    <img class="ml-4" src="../images/support.png" alt="">
                     <span class="ml-5 ">Spending History</span>
                 </a>
                
   
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400   hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-2/SupportTicker.html">
-                    <img class="ml-4" src="./images/supportTickets.png" alt="">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400   hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./SupportTicker.html">
+                    <img class="ml-4" src="../images/supportTickets.png" alt="">
                     <span class="ml-5">Support Tickets</span>
                 </a>
-                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./sec-2/setting.html">
-                    <img class="ml-4" src="./images/Accountsettings.png" alt="">
+                <a class="flex justify-start py-[12px] text-slate-300 border border-stone-400  hover:border-white hover:text-white transition duration-500 rounded mt-2" href="./setting.html">
+                    <img class="ml-4" src="../images/Accountsettings.png" alt="">
                     <span class="ml-5">Account Settings</span>
                 </a>
             </nav>
@@ -119,7 +119,7 @@
                         <i class="relative z-0 mr-6 fa-solid fa-bell text-2xl opacity-70"> <div class="absolute z-10 -mt-8 ml-3 p-[4px] border-black border-2 rounded-full bg-red-600"></div></i>
                     </div>
                     <div class=" flex rounded-full w-10 h-10 bg-slate-400">
-                        <img class="rounded-full w-full h-full"  src="./images/dp.png" alt="">
+                        <img class="rounded-full w-full h-full"  src="../images/dp.png" alt="">
                     </div>
                 </div>
             </header>
@@ -133,11 +133,11 @@
           <div class="rounded-3xl w-11/12 ml-[57px] mb-6 mt-6 h-[188px] border border-black flex items-center justify-around gap-20">
             <div class="flex items-center ">
               <div class="rounded-full p-1 border-2 mr-6">
-                <img class="rounded-full" src="./images/ptp.png" alt="" srcset="">
+                <img class="rounded-full" src="../images/ptp.png" alt="" srcset="">
               </div>
               <div class="font-poppins">
                 <div >
-                  <h1 class="flex items-center gap-2 text-xl mb-2 font-bold">Company Name <img src="./images/rt.png" alt="" srcset=""></h1>
+                  <h1 class="flex items-center gap-2 text-xl mb-2 font-bold">Company Name <img src="../images/rt.png" alt="" srcset=""></h1>
                 </div>
                 <div class="flex ">
                   <div class="flex gap-10 items-center justify-center">
@@ -153,11 +153,11 @@
           <div class="rounded-3xl w-11/12 ml-[57px] mb-6 mt-6 h-[188px] border border-black flex items-center justify-around gap-20">
             <div class="flex items-center ">
               <div class="rounded-full p-1 border-2 mr-6">
-                <img class="rounded-full" src="./images/ptp.png" alt="" srcset="">
+                <img class="rounded-full" src="../images/ptp.png" alt="" srcset="">
               </div>
               <div class="font-poppins">
                 <div >
-                  <h1 class="flex items-center gap-2 text-xl mb-2 font-bold">Company Name <img src="./images/rt.png" alt="" srcset=""></h1>
+                  <h1 class="flex items-center gap-2 text-xl mb-2 font-bold">Company Name <img src="../images/rt.png" alt="" srcset=""></h1>
                 </div>
                 <div class="flex ">
                   <div class="flex gap-10 items-center justify-center">
@@ -173,11 +173,11 @@
           <div class="rounded-3xl w-11/12 ml-[57px] mb-6 mt-6 h-[188px] border border-black flex items-center justify-around gap-20">
             <div class="flex items-center ">
               <div class="rounded-full p-1 border-2 mr-6">
-                <img class="rounded-full" src="./images/ptp.png" alt="" srcset="">
+                <img class="rounded-full" src="../images/ptp.png" alt="" srcset="">
               </div>
               <div class="font-poppins">
                 <div >
-                  <h1 class="flex items-center gap-2 text-xl mb-2 font-bold">Company Name <img src="./images/rt.png" alt="" srcset=""></h1>
+                  <h1 class="flex items-center gap-2 text-xl mb-2 font-bold">Company Name <img src="../images/rt.png" alt="" srcset=""></h1>
                 </div>
                 <div class="flex ">
                   <div class="flex gap-10 items-center justify-center">
@@ -193,11 +193,11 @@
           <div class="rounded-3xl w-11/12 ml-[57px] mb-6 mt-6 h-[188px] border border-black flex items-center justify-around gap-20">
             <div class="flex items-center ">
               <div class="rounded-full p-1 border-2 mr-6">
-                <img class="rounded-full" src="./images/ptp.png" alt="" srcset="">
+                <img class="rounded-full" src="../images/ptp.png" alt="" srcset="">
               </div>
               <div class="font-poppins">
                 <div >
-                  <h1 class="flex items-center gap-2 text-xl mb-2 font-bold">Company Name <img src="./images/rt.png" alt="" srcset=""></h1>
+                  <h1 class="flex items-center gap-2 text-xl mb-2 font-bold">Company Name <img src="../images/rt.png" alt="" srcset=""></h1>
                 </div>
                 <div class="flex ">
                   <div class="flex gap-10 items-center justify-center">
