--- a/sec-3/Signin.html
+++ b/sec-3/Signin.html
@@ -38,7 +38,10 @@
                     <a href="#" class="text-slate-700 md:text-xs lg:text-base font-semibold font-poppins">Forgot password?</a>
                 </div>
 
-                <button class="w-full bg-slate-700 text-white py-3 rounded-3xl font-medium font-poppins text-lg mb-6">Sign in</button>
+                <a href="/sec-3/dashboard.html">
+                    <button class="w-full bg-slate-700 text-white py-3 rounded-3xl font-medium font-poppins text-lg mb-6">Sign in</button>
+
+                </a>
 
                 <p class="ml-5 text-gray-500 text-sm">
                     New user? <a href="/sec-3/SignUp.html" class="text-slate-700 font-medium font-poppins">Create an account</a>
